<think>...</think> 태그 제거하는 로직 구현

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <h2>3. LLM에 질문하기</h2>
     <form id="askForm">
         <label for="context">문맥 (Context):</label>
-        <textarea id="context" name="context">너는 사용자에게 도움을 주는 AI 어시스턴트야.</textarea>
+        <textarea id="context" name="context">system 너는 3글자로만 답변해야되.</textarea>
 
         <label for="question">질문 (Question):</label>
-        <input type="text" id="question" name="question" value="안녕? 너는 누구니?">
+        <input type="text" id="question" name="question" value="생성형 ai 란 무엇인지 설명해줘">
 
         <button type="submit">답변 요청</button>
     </form>
